# chapter-2-blog-service/docs/swagger.json
@@ -8,10 +8,62 @@
         "version": "v1.0"
     },
     "paths": {
+        "/api/v1/articles": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Article 文章"
+                ],
+                "summary": "新增文章",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "CreateArticleRequest",
+                        "name": "CreateArticleRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/validate.CreateArticleRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/model.TagSwagger"
+                        }
+                    },
+                    "400": {
+                        "description": "请求错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/tags": {
             "get": {
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Tag 标签"
                 ],
                 "summary": "获取多个标签",
                 "parameters": [
@@ -78,6 +130,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Tag 标签"
+                ],
                 "summary": "新增标签",
                 "parameters": [
                     {
@@ -124,6 +179,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Tag 标签"
+                ],
                 "summary": "获取标签",
                 "parameters": [
                     {
@@ -165,6 +223,9 @@
             "put": {
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Tag 标签"
                 ],
                 "summary": "更新标签",
                 "parameters": [
@@ -213,6 +274,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Tag 标签"
+                ],
                 "summary": "删除标签",
                 "parameters": [
                     {
@@ -257,6 +321,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Token 鉴权"
+                ],
                 "summary": "获取认证token",
                 "parameters": [
                     {
@@ -300,7 +367,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file"
+                    "File 文件"
                 ],
                 "summary": "文件上传",
                 "parameters": [
@@ -336,6 +403,39 @@
         },
         "model.TagSwagger": {
             "type": "object"
+        },
+        "validate.CreateArticleRequest": {
+            "type": "object",
+            "required": [
+                "created_by",
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "cover_img_url": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "integer"
+                },
+                "tag_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
         },
         "validate.CreateTagRequest": {
             "type": "object",
